[tool.poetry]
name = "blasttools"
version = "0.1.6"
description = ""
authors = ["arabidopsis <ian.castleden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pandas = "^2.1.1"
click = "^8.1.7"
biopython = "^1.81"

[tool.poetry.scripts]
blasttools = "blasttools.__main__:blast"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
