[project]
name = "blasttools"
version = "0.1.24"
description = "Commands for turning blast queries into pandas dataframes."
authors = [{ name = "Ian Castleden", email = "ian.castleden@uwa.edu.au" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = [
    "genomics",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=2.1.1,<3",
    "click>=8.1.7,<9",
    "biopython~=1.81",
]

[project.urls]
Repository = "https://github.com/arabidopsis/blasttools"

[project.scripts]
blasttools = "blasttools.__main__:blast"

[dependency-groups]
dev = [
    "mypy>=1.6.0,<2",
    "openpyxl>=3.1.2,<4",
]

[tool.hatch.build.targets.sdist]
include = ['/blasttools']

[tool.hatch.build.targets.wheel]
include = ['/blasttools']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
